
This file shows the changes in recent releases of MODX. The most current release is usually the
development release, and is only shown to give an idea of what's currently in the pipeline.

- Improve skipFiles attribute for file media sources to allow MODX tags and hiding directories
- [#6336] Fix error when updating property via window in media source properties grid
- Fix various issues with permissions and ACLs on Media Sources
- [#6306] Fix issue with close button always prompting changes made when changes may not have been made
- [#6317] Fix issue with combo editor rendering in grids
- [#6307] Save button now properly resets to disabled after save
- [#6313] Fix issue with renaming content field label on derivative resource types
- [#6084] Fix upgrade from 2.0.x releases
- Add OnManagerPageBeforeRender and OnManagerPageAfterRender events
- [#6207] Prevent overwriting static element file content when changing a static source
- [#6255] Escape html tags in readme, license and changelog files for downloaded Packages
- [#6096] Fix more issues with Resource reloading after changing a template by making the Resource Access grid local
- [#5418] Add ability to export/import Access Policies
- Add ability to import/export Policy Templates, as well as a base export/import processor class
- [#6242] Actions on regular Resources break with Custom Resource Class extended fields
- [#6096] Fix issue where reload token in Resource create would not allow save after validation
- [#6238] Fix rendering issue when opening multiple quick create resource windows at once
- Fix various issues with TV input and output renders by properly objectifying them into base abstract classes
- [#5763] Allow for 3rd-level deep category nesting
- [#6215] Fix issues with derivative resources and non-standard manager themes
- [#6237] Add ability to sort users by active status in mgr grid
- [#6197] Refresh old and new context caches when moving Resource
- Update to xPDO 2.2.1-pl