@@ -2,6 +2,7 @@
 This file shows the changes in recent releases of MODX. The most current release is usually the
 development release, and is only shown to give an idea of what's currently in the pipeline.
 
+- [#6247] Fix minify issues outside of $_SERVER['DOCUMENT_ROOT']
 - Improve skipFiles attribute for file media sources to allow MODX tags and hiding directories
 - [#6336] Fix error when updating property via window in media source properties grid
 - Fix various issues with permissions and ACLs on Media Sources
